# docs/swagger.yaml
@@ -486,23 +486,23 @@ paths:
     post:
       consumes:
       - application/json
-      description: 用于查询当前用户对图片的操作
+      description: 用于图片进行收藏操作
       produces:
       - application/json
       responses:
         "200":
-          description: 查询成功
+          description: 收藏成功
           schema:
             $ref: '#/definitions/response.Information'
         "401":
-          description: 查询失败
+          description: 收藏失败
           schema:
             $ref: '#/definitions/response.Information'
       security:
       - ApiKeyAuth: []
-      summary: 查询当前用户对图片的操作
+      summary: 图片进行收藏操作
       tags:
-      - 查询当前用户对图片的操作
+      - 图片进行收藏操作
   /image/index:
     get:
       consumes:
@@ -545,6 +545,27 @@ paths:
       summary: 图片进行点赞操作
       tags:
       - 图片进行点赞操作
+  /image/operation:
+    post:
+      consumes:
+      - application/json
+      description: 用于查询当前用户对图片的操作
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 查询成功
+          schema:
+            $ref: '#/definitions/response.Information'
+        "401":
+          description: 查询失败
+          schema:
+            $ref: '#/definitions/response.Information'
+      security:
+      - ApiKeyAuth: []
+      summary: 查询当前用户对图片的操作
+      tags:
+      - 查询当前用户对图片的操作
   /image/score:
     post:
       consumes:
